--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="C:/Users/elwya/Desktop/Formacion/EEE2/Lib/javax.persistence_2.2.1.v201807122140.jar"/>
 	<classpathentry kind="lib" path="C:/Users/elwya/Desktop/Formacion/EEE2/Lib/javax.persistence-api-2.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/elwya/Desktop/Formacion/EEE2/Lib/mysql-connector-j-8.0.31.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
